2007-04-23  Frank Ch. Eigler  <fche@redhat.com>

	* tapsets.cxx (die_entrypc): Expand search algorithm to
	check for "aranges", as sometimes occurs for inlined functions.

2007-04-20  Roland McGrath  <roland@redhat.com>

	* systemtap.spec.in (elfutils_version): Bump to 0.127.

2007-04-18  Frank Ch. Eigler  <fche@elastic.org>

	* Makefile.am (install-elfutils): Use $INSTALL_PROGRAM to
	copy elfutils shared libraries, as suggested by Perry Cheng
	<perryche@us.ibm.com>.

2007-04-18  Frank Ch. Eigler  <fche@elastic.org>

	* parse.cxx (scan_pp): Correct warnings from if/if/else nesting.

2007-04-10  Martin Hunt  <hunt@redhat.com>

	* stp_check.in: Fixes to make sure debugfs or relayfs are mounted
	exactly where we expect and other mounts are ignored.

2007-04-03  Pierre Peiffer  <pierre.peiffer@bull.net>

	* parse.cxx, parse.h (lexer::scan): Add $# and @# identifiers.
	(eval_pp_conditional, scan_pp): Allow the use of $x and @x identifiers.
	Produce more accurate error messages.
	* stap.1.in: Document $# and @# identifiers.

2007-04-04  Frank Ch. Eigler  <fche@elastic.org>

	GCC 4.3 compatibility patches from Debian.
	* buildrun.cxx, hash.cxx, tapsets.cxx, translate.cxx: #include a few
	more C++ headers.

2007-04-03  Frank Ch. Eigler  <fche@elastic.org>

	Improve error messages for underprivileged scripts.
	* parse.h (parse_error): Add skip_some member, true default.
	* parse.cxx (parse_embedded_code): Send false on missing -g.
	* parse.cxx (parser::parse): Respect flag during parse error
	recovery.

2007-04-02  Frank Ch. Eigler  <fche@redhat.com>

	PR 3261.
	* tapsets.cxx (query_module): Reject elfutils module "kernel"
	unless kernel.* probe point used.

2007-04-02  Frank Ch. Eigler  <fche@elastic.org>

	* tapsets.cxx (query_dwarf_func): Skip non-inlined functions
	for .function().inline case.

2007-03-30  Frank Ch. Eigler  <fche@redhat.com>

	PR 1570
	* NEWS: Document probe handler language change re. inline functions.
	* stapprobes.5.in: Likewise.